objects/OF_PriceTracking__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>PriceTracking</relationshipLabel>
        <relationshipName>PriceTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Prezzo1__c</fullName>
        <label>Old price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OF_Prezzo2__c</fullName>
        <label>New price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OF_PriceBookEntryID__c</fullName>
        <label>PriceBookEntryID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_PriceBookEntryName__c</fullName>
        <label>PriceBookEntry Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_PriceBookEntry__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; OF_PriceBookEntryID__c , OF_PriceBookEntryName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriceBookEntry</label>
        <type>Text</type>
    </fields>
    <label>PriceTracking</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>PriceTrackingName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PriceTracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>